tests/compile_fail/on_a_const_function.rs
use michie::memoized;

#[memoized(key_expr = ())]
const fn f() -> () {
    ()
}

fn main() {}
