tests/compile_fail/on_a_const_function.stderr
error: const functions not allowed
 --> tests/compile_fail/on_a_const_function.rs:4:1
  |
3 | #[memoized(key_expr = ())]
  | -------------------------- in this procedural macro expansion
4 | const fn f() -> () {
  | ^^^^^
  |
  = note: this error originates in the attribute macro `memoized` (in Nightly builds, run with -Z macro-backtrace for more info)
